@@ -266,7 +266,7 @@ Custom actions
    -- Custom action which generates fake A record
    local ffi = require('ffi')
    local function fake_A_record(state, req)
-       local answer = req.answer
+       local answer = req:ensure_answer()
        local qry = req:current()
        if qry.stype ~= kres.type.A then
            return state
